// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlinePosition renders 0 1`] = `
Array [
  .c0 {
  text-underline-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders function 1`] = `
Array [
  .c0 {
  text-underline-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders negative number 1`] = `
Array [
  .c0 {
  text-underline-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-underline-position: July;
  }
}

@media April {
  .c0 {
    text-underline-position: August;
  }
}

@media January {
  .c0 {
    text-underline-position: September;
  }
}

@media April {
  .c0 {
    text-underline-position: November;
  }
}

@media June {
  .c0 {
    text-underline-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-position: July;
  }
}

@media April {
  .c0 {
    text-underline-position: August;
  }
}

@media January {
  .c0 {
    text-underline-position: September;
  }
}

@media April {
  .c0 {
    text-underline-position: November;
  }
}

@media June {
  .c0 {
    text-underline-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-position: January;
  }
}

@media April {
  .c0 {
    text-underline-position: December;
  }
}

@media January {
  .c0 {
    text-underline-position: April;
  }
}

@media April {
  .c0 {
    text-underline-position: May;
  }
}

@media June {
  .c0 {
    text-underline-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-position: January;
  }
}

@media April {
  .c0 {
    text-underline-position: December;
  }
}

@media January {
  .c0 {
    text-underline-position: April;
  }
}

@media April {
  .c0 {
    text-underline-position: May;
  }
}

@media June {
  .c0 {
    text-underline-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders string 1`] = `
Array [
  .c0 {
  text-underline-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlinePosition renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
